# sf_demo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/z/sf00/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/ffmpeg/include/libavdevice/: avdevice.h
app/src/main/cpp/ffmpeg/include/libavformat/: avformat.h
app/src/main/java/com/z/sf00/: MainActivity.java
app/src/main/java/com/z/sf00/player/: ZPlayerView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/z/sf00/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
